# wired-watering

./: .gitignore  .gitmodules  2021-05-eeprom-config-timer.eep  CMakeLists.txt  README.md  azure-pipelines.yml  ignore_secret_config_changes.sh  init_project_and_script_files.sh
GccApplication1/GccApplication1/: GccApplication1.componentinfo.xml  GccApplication1.cppproj  display.h  input.cpp  main.cpp  pump.cpp  pump.h  queue.cpp  queue.h  time_utilities.cpp  timer0.h
GccApplication1/GccApplication1/Debug/: GccApplication1.elf  GccApplication1.hex  GccApplication1.lss  GccApplication1.map  GccApplication1.srec  Makefile  input.d  main.d  makedep.mk  pump.d  timer0.d
GccApplication1/GccApplication1/Release/: GccApplication1.elf  GccApplication1.hex  GccApplication1.lss  GccApplication1.map  GccApplication1.srec  Makefile  hardware_entities.d  main.d  makedep.mk  queue.d  time_utilities.d
atmega-device/: CMakeLists.txt  GccApplication1.atsln  LICENSE  LICENSE.MD  README.md
atmega-device/GccApplication1/: CMakeLists.txt  GccApplication1.componentinfo.xml  GccApplication1.cppproj  display.h  f_interrupt.h  hardware_entities.cpp  hardware_entities.h  input.h  main.cpp  pump.h  queue.cpp  time_utilities.h  timer0.cpp  ui_utility.h
atmega-device/GccLibrary1/: CMakeLists.txt  GccLibrary1.componentinfo.xml  GccLibrary1.cppproj  library.cpp
atmega-device/example-c++/: CMakeLists.txt  build.ps1
esp-device/: CMakeLists.txt  Makefile  sdkconfig.ci
esp-device/main/: .gitignore  CMakeLists.txt  atm_slave_comm.c  atm_slave_comm.h  config.h  custom_utils.h  gpio_definitions_felix.h  gpio_definitions_james.h  gpio_definitions_lucas.h  gpio_definitions_mayson.h  gpio_wrapper.c  gpio_wrapper.h  main.c  myutils.h  secret_config.h  select_device.h  select_device_felix.h  select_device_james.h  select_device_lucas.h  select_device_mayson.h  server.cpp  server.h  server_c_connector.cpp  server_c_connector.h
esp-device/script/: ignore_secret_config_changes.sh
main/: .gitignore  config.h  main.c
maya/: CMakeLists.txt  landscape.json  watering-plan.json
maya/script/: cb-cmd-build.bat  git-ignore-secret-changes.sh  maya-run.sh  maya_connect_internet_usb0.sh  maya_go.sh  maya_os_init.sh  maya_routine.sh  open-sln.ps1  ub-unix-build.sh  uci-unix-clean_init.sh  uobe-unix-build-only-executable.sh  ur-unix-run.sh  ut-unix-test.sh  wb-win-build.ps1  wci-win-clean_init.ps1  wos-win-open-sln.ps1  wt-win-test.ps1
maya/secrets/: telegram_secrets.json
maya/src/: CMakeLists.txt  configs.h  main.cpp  valve_patching.h
maya/test/: CMakeLists.txt
script/: ur-unix-run.sh
