#####################################################################
# simple AVR executable
#####################################################################
add_avr_executable(
   Slave-for-James
   main.cc
   )

#####################################################################
# libraries to link to
#####################################################################
target_link_libraries(
   toggle-led-cpp-${AVR_MCU}.elf
   mycpplib-${AVR_MCU}
   )
