#####################################################################
# simple AVR executable
#####################################################################
add_avr_executable(
   Slave-for-James
   main.cpp
   )

#####################################################################
# libraries to link to
#####################################################################
target_link_libraries(
   Slave-for-James-${AVR_MCU}.elf
   mycpplib-${AVR_MCU}
   )
